--- a/blog/django_admin/templates/blog_app/post/create_post.html
+++ b/blog/django_admin/templates/blog_app/post/create_post.html
@@ -4,29 +4,55 @@
 {% block title %}Post{% endblock %}
 
 {% block header %}
-<h2>Change Post</h2>
+<h2>Create Post</h2>
 {% endblock %}
+
 
 {% block content %}
 <div class="container">
-    <form action="{% url 'django_admin:change_post_admin' post_pk %}" method="post">
+    <form action="{% url 'django_admin:create_post_admin' %}" method="post">
         {% csrf_token %}
+        <div class="row">
+            <div class="col">
+                {% if form.errors %}
+                <ul style="margin-left: 0; padding-left: 0; list-style-type: none; ">
+                    {% for error, text in form.errors.items %}
+                        <li>
+                            <div class="row">
+                                <div class="col-2">
+                                   <h4 class="h4 mb-3"> <strong>{{error|capfirst}}:</strong></h4>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="h4 mb-3">{{text}}</h4>
+                                </div>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+        </div>
         <div class="card-body">
             <div class="form-group">
                 <label for="exampleInputTitle">Title:</label>
                 <input type="text" class="form-control" id="exampleInputTitle" placeholder="Title..."
-                       value="{{form.instance.title}}" name="title">
+                       name="title" required value="{{form.instance.title}}">
             </div>
             <div class="form-group">
                 <label for="exampleInputBody">Body</label>
                 <textarea type="password" class="form-control" id="exampleInputBody" placeholder="Body"
-                          style="width: 100%; height: 500px; resize: none;" name="body">{{ form.instance.body }}</textarea>
+                          style="width: 100%; height: 500px; resize: none;" name="body" required>{{form.instance.body}}</textarea>
             </div>
             <div class="form-group">
                 <div class="form-group">
                     <label for="selectAuthor">Author:</label>
-                    <select name="author" id="selectAuthor" class="form-control" style="max-width: 20%;">
-                        <option value="{{ form.instance.author.pk }}" selected>{{form.instance.author}}</option>
+                    <select name="author" id="selectAuthor" class="form-control" style="max-width: 20%;" required>
+                        {% if form.instance.author %}
+                            <option value="{{ form.instance.author.pk }}" selected>{{form.instance.author}}</option>
+                        {% else %}
+                            <option disabled selected>User</option>
+                        {% endif %}
+
                         {% for user in users %}
                             <option value="{{ user.pk }}">{{ user }}</option>
                         {% endfor %}
@@ -36,8 +62,13 @@
             <div class="form-group">
                 <div class="form-group">
                     <label for="selectCategory">Category:</label>
-                    <select name="category" id="selectCategory" class="form-control" style="max-width: 20%;">
-                        <option value="{{ form.instance.category.pk }}" selected>{{form.instance.category}}</option>
+                    <select name="category" id="selectCategory" class="form-control" style="max-width: 20%;" required>
+                        {% if form.instance.category %}
+                            <option value="{{ form.instance.category.pk }}" selected>{{form.instance.category}}</option>
+                        {% else %}
+                            <option disabled selected>Category</option>
+                        {% endif %}
+
                             {% for category in categories %}
                                 <option value="{{ category.pk }}">{{category}}</option>
                             {% endfor %}
@@ -60,11 +91,8 @@
         <div class="card-footer">
             <div class="row">
                 <div class="col-11">
-                    <button type="submit" class="btn btn-primary" name="multiple" value="False">Save</button>
-                    <button type="submit" class="btn btn-primary" name="multiple" value="True">Save and add another</button>
-                </div>
-                <div class="col-1">
-                    <a href="{% url 'django_admin:delete_post_admin' post_pk %}" class="btn btn-danger">Delete</a>
+                    <button type="submit" class="btn btn-primary" name="multiple" value="0">Save</button>
+                    <button type="submit" class="btn btn-primary" name="multiple" value="1">Save and add another</button>
                 </div>
             </div>
         </div>
