--- a/blog/django_admin/templates/blog_app/post/list_posts.html
+++ b/blog/django_admin/templates/blog_app/post/list_posts.html
@@ -4,7 +4,14 @@
 {% block title %}Posts{% endblock %}
 
 {% block header %}
-<h1>Posts</h1>
+<div class="row">
+    <div class="col-10">
+        <h1>Posts</h1>
+    </div>
+    <div class="col-2">
+        <a href="{% url 'django_admin:create_post_admin' %}" class="btn btn-secondary">Add new post</a>
+    </div>
+</div>
 {% endblock %}
 
 {% block content %}
