--- a/blog/django_admin/templates/admin_base.html
+++ b/blog/django_admin/templates/admin_base.html
@@ -31,7 +31,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="{% url 'blog_app:list_view' %}" class="nav-link">View site</a>
+                <a href="{% url 'blog_app:list_view' %}" class="nav-link" target="_blank">View site</a>
             </li>
         </ul>
 
